@@ -49,33 +49,33 @@ var (
 		testV1RouteFromFolder,
 		testV1RouteGetWeightRoutes,
 		testV1RouteGetLeastCostRoutes,
-		testV1RouteGetLeastCostRoutesWithoutUsage,
-		testV1RouteGetLeastCostRoutesWithMaxCost,
-		testV1RouteGetLeastCostRoutesWithMaxCost2,
-		testV1RouteGetLeastCostRoutesWithMaxCostNotFound,
-		testV1RouteGetHighestCostRoutes,
-		testV1RouteGetLeastCostRoutesErr,
-		testV1RoutePolulateStatsForQOS,
-		testV1RouteGetQOSRoutes,
-		testV1RouteGetQOSRoutes2,
-		testV1RouteGetQOSRoutes3,
-		testV1RouteGetQOSRoutesFiltred,
-		testV1RouteGetQOSRoutesFiltred2,
-		testV1RouteGetRouteWithoutFilter,
-		testV1RouteSetRouteProfiles,
-		testV1RouteGetRouteProfileIDs,
-		testV1RouteUpdateRouteProfiles,
-		testV1RouteRemRouteProfiles,
-		testV1RouteGetRouteForEvent,
-		testV1RouteSetRouteProfilesWithoutTenant,
-		testV1RouteRemRouteProfilesWithoutTenant,
-		// reset the database and load the TP again
-		testV1RouteInitDataDb,
-		testV1RouteFromFolder,
-		testV1RoutesOneRouteWithoutDestination,
-		testV1RouteRoutePing,
-		testV1RouteMultipleRouteSameID,
-		testV1RouteAccountWithRatingPlan,
+		//testV1RouteGetLeastCostRoutesWithoutUsage,
+		//testV1RouteGetLeastCostRoutesWithMaxCost,
+		//testV1RouteGetLeastCostRoutesWithMaxCost2,
+		//testV1RouteGetLeastCostRoutesWithMaxCostNotFound,
+		//testV1RouteGetHighestCostRoutes,
+		//testV1RouteGetLeastCostRoutesErr,
+		//testV1RoutePolulateStatsForQOS,
+		//testV1RouteGetQOSRoutes,
+		//testV1RouteGetQOSRoutes2,
+		//testV1RouteGetQOSRoutes3,
+		//testV1RouteGetQOSRoutesFiltred,
+		//testV1RouteGetQOSRoutesFiltred2,
+		//testV1RouteGetRouteWithoutFilter,
+		//testV1RouteSetRouteProfiles,
+		//testV1RouteGetRouteProfileIDs,
+		//testV1RouteUpdateRouteProfiles,
+		//testV1RouteRemRouteProfiles,
+		//testV1RouteGetRouteForEvent,
+		//testV1RouteSetRouteProfilesWithoutTenant,
+		//testV1RouteRemRouteProfilesWithoutTenant,
+		//// reset the database and load the TP again
+		//testV1RouteInitDataDb,
+		//testV1RouteFromFolder,
+		//testV1RoutesOneRouteWithoutDestination,
+		//testV1RouteRoutePing,
+		//testV1RouteMultipleRouteSameID,
+		//testV1RouteAccountWithRatingPlan,
 		testV1RouteStopEngine,
 	}
 )
