@@ -673,6 +673,7 @@ const (
 	SortingParameters        = "SortingParameters"
 	RouteAccountIDs          = "RouteAccountIDs"
 	RouteRatingplanIDs       = "RouteRatingplanIDs"
+	RouteRateProfileIDs      = "RouteRateProfileIDs"
 	RouteStatIDs             = "RouteStatIDs"
 	RouteWeight              = "RouteWeight"
 	RouteParameters          = "RouteParameters"
